<resources>
    <string name="app_name">BaseMVVM3</string>
    <string name="show_center_dialog">Show Center Dialog</string>
    <string name="show_bottom_dialog">Show Bottom Dialog</string>
    <string name="dialog_image">Dialog Image</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dialog_header">Dialog Header</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="icon_home">icon home</string>
    <string name="icon_list">icon_list</string>
    <string name="icon_feedback">icon feedback</string>
    <string name="dialog_Ex">Dialog Ex</string>
    <string name="recycler_view_Ex">Recycler View Ex</string>
    <string name="feedback">Feedback</string>
    <string name="menu_night_mode">night_mode</string>
    <string name="menu_night_mode_system">menu_night_mode_system</string>
    <string name="menu_night_mode_day">menu_night_mode_day</string>
    <string name="menu_night_mode_night">menu_night_mode_night</string>
    <string name="menu_night_mode_auto">menu_night_mode_auto</string>
    <string name="avatar">avatar</string>
    <string name="add_cheese">add Cheese</string>
    <string name="insert_new_tag_hint">Insert new Tag</string>
    <string name="nav_header">Username</string>
    <string name="retry_button">retry</string>
</resources>
